# index-wrapper

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.alpine  README.md  compose.yml  config.py  docker-compose.example.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py
app/services/: downloader.py  extractor.py  uploader.py
app/utils/: database.py  driver.py  file.py
services/: downloader.py  extractor.py  uploader.py
utils/: database.py  driver.py  file.py
