[project]
name = "index-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "patool>=3.1.0",
    "python-dotenv>=1.0.1",
    "rclone-python>=0.1.18",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "playwright>=1.53.0",
    "supabase>=2.10.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]

[project.scripts]
download = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]